@@ -76,3 +76,4 @@
 5/11/2020
 - add car photo
 - fix add car photo
+- fix add car photo rotate
